@@ -589,12 +589,11 @@ static double _mueN_O2(double Te){
   double Te_control[] = 
   { 
     5.70378247465620,
-    7.39303753148020,
+    7.45290696430674,
     8.15517758348606,
     8.64580049988764,
     9.45446056782523,
-    10.2346191249505,
-    10.5829258193665,
+    10.4238611248242,
     11.1835383764881,
     11.8792632932909,
     13.6691438195424,
@@ -603,13 +602,12 @@ static double _mueN_O2(double Te){
   /* log m^-1 V^-1 s^-1*/
   double mueN_control[] = 
   { 
-    58.8729601445013,
-    57.5646273248511,
+    59.7518015663339,
+    57.8269915893186,
     57.2544269409688,
     56.9107008574445,
     56.3934443433482,
-    56.1375109692110,
-    55.7320458611028,
+    56.0504995922214,
     55.6126991034703,
     55.1275961353042,
     54.3524788207324,
