@@ -456,8 +456,8 @@ where $(c_p)_k$ is the specific heat at constant pressure of the $k$th species a
   \multirow{2}{*}{1} &  \multirow{2}{*}{ $\rm e^- + N_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny 5.7038    6.0067    7.5266    9.0580    9.2866    9.6956   10.0010   10.7942   11.3595   13.1075   14.4873     \\
   &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny  58.8996   58.6144   57.2080   56.0505   55.8498   55.4609   55.2620   55.2282   55.0865   54.4855   54.2678  \\
   \midrule  
-  \multirow{2}{*}{2} &  \multirow{2}{*}{ $\rm e^- + O_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny     5.7038    7.3930    8.1552    8.6458    9.4545   10.2346   10.5829   11.1835   11.8793   13.6691   14.3029 \\
-  &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny  58.8730   57.5646   57.2544   56.9107   56.3934   56.1375   55.7320   55.6127   55.1276   54.3525   54.2716    \\
+  \multirow{2}{*}{2} &  \multirow{2}{*}{ $\rm e^- + O_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny      5.7038    7.4529    8.1552    8.6458    9.4545   10.4239   11.1835   11.8793   13.6691   14.3029\\
+  &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny    59.7518   57.8270   57.2544   56.9107   56.3934   56.0505   55.6127   55.1276   54.3525   54.2716  \\
   \midrule 
   \multirow{2}{*}{3} &  \multirow{2}{*}{ $\rm e^- + NO  $   } & ${\rm ln}~T_{\rm e}$  & \tiny 5.7038    6.1119    6.2863    7.0606    7.5408    7.7537    7.9923    8.6608    9.5506   10.7689   12.7980   14.2900 \\
   &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny  58.6293   58.5553   58.5354   58.0894   57.3686   56.9769   56.5835   56.3153   55.9881   55.4932   54.1576   54.0273 \\
